ApexWorkbook/src/objects/Stage__c.object
<CustomObject>
    <fields>
        <fullName>Crowd_Capacity__c</fullName>
        <label>Crowd Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Festival__c</fullName>
        <label>Festival</label>
        <referenceTo>Festival__c</referenceTo>
        <relationshipLabel>Stages</relationshipLabel>
        <relationshipName>Stages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Has_Piano__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Piano</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Equipment_Available__c</fullName>
        <label>Special Equipment Available</label>
        <picklist>
            <picklistValues>
                <fullName>Lasers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pyrotechnics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smoke Machines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Drumsets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Subwoofers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fireworks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fog Machines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spotlights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-woofers</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stage_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stage Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Type__c</fullName>
        <label>Stage Type</label>
        <picklist>
            <picklistValues>
                <fullName>Proscenium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theatre in the Round</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Stage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>